# heart-disease-predictor

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api/: main.py  predictor.py  requirements.txt  schemas.py
app/: app.py  requirements.txt
data/: heart.csv
notebooks/: projeto_doenca_cardiaca.ipynb
src/: evaluation.py  model.py  persistence.py  preprocessing.py
